--- a/main.html
+++ b/main.html
@@ -7,6 +7,38 @@
 </head>
 
 <body>
+	<table border="1" width="100%">
+		<tr>
+			<th>Roll numbers</th>
+			<th>Names</th>
+		</tr>
+		<tr>
+			<td>1</td>
+			<td>Shruti</td>
+		</tr>
+		<tr>
+			<td>2</td>
+			<td>Shubham</td>
+		</tr>
+		<tr>
+			<td>3</td>
+			<td>Poornansh</td>
+		</tr>
+	</table>
+
+	<h1>List of medias</h1>
+	<ol>
+		<li>
+			<img src="https://picsum.photos/id/123/200/300" alt="MyImage">
+		</li>
+		<li>
+			<video width="200" controls src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" >
+				<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4" />
+			</video>
+		</li>
+		<li>
+			<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls></audio>
+		</li>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
