--- a/main.html
+++ b/main.html
@@ -8,10 +8,13 @@
 
 <body>
 	<table border="1" width="100%">
+		<thead
 		<tr>
 			<th>Roll numbers</th>
 			<th>Names</th>
 		</tr>
+		</thead>
+		<tbody>
 		<tr>
 			<td>1</td>
 			<td>Shruti</td>
@@ -24,6 +27,7 @@
 			<td>3</td>
 			<td>Poornansh</td>
 		</tr>
+		</tbody>
 	</table>
 
 	<h1>List of medias</h1>
